# ColorEx

./: CHANGELOG.md  CONTRIBUTING.md  ColorEx_Architecture_Development_Contract_v2.0.md  LICENSE.md  README.md  example.py  example_50x50.html  pyproject.toml
.github/workflows/: ci.yml
colorex/: __init__.py  cli.py  exceptions.py  heatmap.py  normalization.py  theme.py  utils.py
colorex/renderer/: __init__.py  base.py  html_renderer.py  image_renderer.py
docs/: README.md
examples/: README.md
examples/example1/: dataset_50x50.csv  heatmap_50x50.html  run.py
examples/example2/: heatmap_in_memory.html  run.py
examples/example3/: dataset_cli.csv  run.py
tests/: test_cli.py  test_heatmap_api.py  test_html_renderer.py  test_missing_handling.py  test_normalization.py
